avances en problema 2 - modelos tentativos para todas las secciones

--- a/evaluacion-parcial.Rmd
+++ b/evaluacion-parcial.Rmd
@@ -258,7 +258,18 @@ a cada vino. Recomiendo centrarlo para el ajuste de los modelos.
 
 ### Lectura de los datos
 ```{r}
+## Definición de semilla
+SEED <- 1234
+
+## Lectura de los datos
 data_vinos <- read.table("vinos.txt", sep=";", header=TRUE)
+
+## Creando columna con variable "score" centrada
+data_vinos <- data_vinos %>% 
+  mutate(
+    score_c = score - mean(score)
+  )
+
 data_vinos
 ```
 
@@ -276,10 +287,17 @@ unique(data_vinos$wine.amer)
 unique(data_vinos$judge.amer)
 
 #### Explorando la distribución de scores
-data_vinos %>%
+bx1 <- data_vinos %>%
     ggplot(
         aes(score)
     ) + geom_boxplot()
+
+bx2 <- data_vinos %>%
+    ggplot(
+        aes(score_c)
+    ) + geom_boxplot()
+
+bx1 + bx2
 ```
 
 
@@ -385,12 +403,6 @@ t.test(amer_judge, nonamer_judge)
 
 
 
-```{r}
-data_vinos
-```
-
-
-
 a) En este inciso, sólo considera la variación entre jueces y
 vinos. Ajusta un modelo de regresión lineal utilizando estos predictores.
 Justifica tu distribución _a priori_. ¿Cómo interpretas la variación entre
@@ -399,22 +411,30 @@ jueces individuales y vinos individuales? ¿Notas algún patrón (puedes utiliza
 vinos fueron calificados como peores / mejores en promedio?
 
 ```{r}
-## Estandarizando las variables
-data_vinos
+## Revisión de la distribución
+# data_vinos %>% 
+#   ggplot(
+#     aes(x=score)
+#   ) + geom_histogram()
 
-m_2a <- stan_glm(score ~ judge + wine, data=data_vinos)
-summary(m_2a)
+## Ajuste de modelo
+m_2a <- stan_glm(score_c ~ judge + wine, 
+                 prior=normal(0, 0.5),
+                 data=data_vinos, 
+                 seed=SEED, 
+                 refresh = 0,
+               )
+# summary(m_2a)
+print(m_2a)
 ```
 
 
 ```{r}
-modelo_d1 <- lm(score ~ judge + wine, data=data_vinos)
-modelo_d1
+mcmc_areas(
+  m_2a
+)
 ```
-
-```{r}
-summary(modelo_d1)
-```
+**Esta visualización nos permite visualizar la estimación de los intervalos posterior.**
 
 
 
@@ -427,6 +447,49 @@ que observas en el estadistico que describe el número efectivo de parámetros.
 ¿Cómo justificas este comportamiento? ¿Cómo concilias lo observado en la $R^2_B$
 y la comparación de devianza entre ambas posibilidades?
 
+```{r}
+## Ajustando con previa _default_
+m_2b1 <- stan_glm(
+  score ~ judge + wine, 
+  data=data_vinos
+)
+
+print(m_2b1)
+
+bR2_m_2b1 <- bayes_R2(m_2b1)
+
+mcmc_hist(
+  data.frame(bR2_m_2b1), 
+  binwidth=0.01
+)  +
+  xlab('Bayesian R2 con previa _default_') +
+  geom_vline(xintercept=median(bR2_m_2b1))
+```
+
+
+
+```{r}
+## Ajustando con distribución a priori regularizada
+m_2b2 <- stan_glm(
+  score ~ judge + wine, 
+  data=data_vinos, 
+  prior=hs()
+)
+
+print(m_2b2)
+
+bR2_m_2b2 <- bayes_R2(m_2b2)
+
+mcmc_hist(
+  data.frame(bR2_m_2b2), 
+  binwidth=0.01
+)  +
+  xlab('Bayesian R2 con distribución a priori regularizada') +
+  geom_vline(xintercept=median(bR2_m_2b2))
+```
+
+**Al copmarar la R^2-Bayesiana podemos observar que...**
+
 
 c) Ahora considera como predictores `flight`(el tipo de vino), `wine.amer` (de
 dónde proviene), y `judge.amer` (indicador si el juez es americano). Para este
@@ -434,10 +497,41 @@ inciso no incluyas las variables de los casos anteriores. De igual manera,
 justifica la selección de distribución previa que utilizas. ¿Cómo se relacionan
 estas estimaciones con lo que observaste en el inciso `a`?
 
+```{r}
+## Ajuste de modelo
+m_2c <- stan_glm(score_c ~ flight + wine.amer + judge.amer, 
+                 prior=normal(0, 0.5),
+                 data=data_vinos, 
+                 seed=SEED, 
+                 refresh = 0,
+               )
+# summary(m_2a)
+print(m_2c)
+
+mcmc_areas(m_2c)
+```
+**Al graficar las**
+
+
 d) Ahora considera todas las posibles interacciones de dos términos con las tres
 variables de arriba. Explica lo que significa cada término e interpreta los
 coeficientes. ¿Cómo se relacionan estos resultados con los del inciso `a` de
 esta sección?
+
+```{r}
+## Ajuste de modelo
+m_2d <- stan_glm(score_c ~ flight + wine.amer + judge.amer + flight:wine.amer + flight:judge.amer + wine.amer:judge.amer, 
+                 prior=normal(0, 0.5),
+                 data=data_vinos, 
+                 seed=SEED, 
+                 refresh = 0,
+               )
+# summary(m_2a)
+print(m_2d)
+
+mcmc_areas(m_2d)
+```
+
 
 
 ### Datos: 
